--- a/MineBlock/MineBlock/MineBlock/MineBlock.csproj
+++ b/MineBlock/MineBlock/MineBlock/MineBlock.csproj
@@ -133,6 +133,9 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\ConsoleManager.cs" />
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\Tool.cs" />
+    <Compile Include="Managers\Inventory.cs" />
     <Compile Include="Managers\MenuRef.cs" />
     <Compile Include="Mobs\Hoverbot.cs" />
     <Compile Include="Mobs\Mob.cs" />
