The world is now separated into chunks.
The chunks store all the information needed. This will allow for more
biome specialties.
Optimizations need to be done.

--- a/MineBlock/MineBlock/MineBlock/MineBlock.csproj
+++ b/MineBlock/MineBlock/MineBlock/MineBlock.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Blocks\CobbleStone.cs" />
     <Compile Include="Blocks\Leaf.cs" />
     <Compile Include="Blocks\Wood.cs" />
+    <Compile Include="Chunk.cs" />
     <Compile Include="Commands\Commandblock.cs" />
     <Compile Include="Blocks\Dirt.cs" />
     <Compile Include="Blocks\Grass.cs" />
