--- a/MineBlock/MineBlock/MineBlock/MineBlock.csproj
+++ b/MineBlock/MineBlock/MineBlock/MineBlock.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Blocks\Bedrock.cs" />
     <Compile Include="Blocks\Cake.cs" />
     <Compile Include="Blocks\Chest.cs" />
+    <Compile Include="Blocks\IGravityBlock.cs" />
     <Compile Include="Blocks\Trampoline.cs" />
     <Compile Include="Blocks\CobbleStone.cs" />
     <Compile Include="Blocks\Leaf.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Blocks\Teleporter.cs" />
     <Compile Include="Blocks\Water.cs" />
     <Compile Include="Blocks\_InformationBlock.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="FrameRateCounter.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Commands\Command.cs" />
